fix overflow

--- a/trunk/css/style.css
+++ b/trunk/css/style.css
@@ -128,7 +128,6 @@ input[type="button"].disabled {
     border:3px solid #06C;
     padding:10px 5px;
     height:350px;
-    overflow:auto;
     width:350px;
     float:left;
     z-index: 10;
